Terraform/modules/alb/alb_securitygroups.tf
resource "aws_security_group" "alb" {
  name        = "${var.cluster_name}-${terraform.workspace}_alb_security_group"
  description = "${var.cluster_name}-${terraform.workspace}_load balancer security group"
  vpc_id      = var.vpc_id

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = "${var.allowed_cidr_blocks}"
  }

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = "${var.allowed_cidr_blocks}"
  }

  # Allow all outbound traffic.
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "${var.cluster_name}-${terraform.workspace}-alb-security-group"
  }
}
